Clean up pack_move

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -216,7 +216,131 @@
       "[4.1058674]\n",
       "[4.105868460384864]\n",
       "[5.058589]\n",
-      "[5.058591746271536]\n"
+      "[5.058591746271536]\n",
+      "[0.14144647]\n",
+      "[0.14144643480625813]\n",
+      "[3.9452562]\n",
+      "[3.945255729561956]\n",
+      "[2.7107682]\n",
+      "[2.7107683021439404]\n",
+      "[3.1487665]\n",
+      "[3.148766349585172]\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[4.10586846 5.05859175]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.14144643 3.94525573]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[3.470697]\n",
+      "[3.470696988173085]\n",
+      "[6.9413943]\n",
+      "[6.94139397634617]\n",
+      "[8.393713]\n",
+      "[8.393712961948996]\n",
+      "[0.07739897]\n",
+      "[0.07739900693541185]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[8.39371296 0.07739901]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[17.353481]\n",
+      "[17.353484940865425]\n",
+      "[34.706963]\n",
+      "[34.70696988173085]\n",
+      "[41.96856]\n",
+      "[41.968564809744976]\n",
+      "[0.38699484]\n",
+      "[0.38699503467705926]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[41.96856481  0.38699503]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[0.3531003]\n",
+      "[0.35310069875272765]\n",
+      "[3.789965]\n",
+      "[3.789965582031825]\n",
+      "[2.146739]\n",
+      "[2.1467398140715064]\n",
+      "[2.6367323]\n",
+      "[2.6367332253648272]\n",
+      "[0.039698087]\n",
+      "[0.03969808876667014]\n",
+      "[1.8159052]\n",
+      "[1.815904948030701]\n",
+      "[1.2309797]\n",
+      "[1.2309794244696337]\n",
+      "[1.5046461]\n",
+      "[1.504646080872017]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.14673981 2.63673323]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03969809 1.81590495]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[0.62234104]\n",
+      "[0.6223413133262065]\n",
+      "[2.3894377]\n",
+      "[2.389438186820823]\n",
+      "[1.6067601]\n",
+      "[1.6067605381154593]\n",
+      "[7.5175767]\n",
+      "[7.517577523881461]\n",
+      "[1.3955986]\n",
+      "[1.3955986238550628]\n",
+      "[1.4091043]\n",
+      "[1.4091041677707845]\n",
+      "[1.1257305]\n",
+      "[1.1257304906431822]\n",
+      "[1.2146299]\n",
+      "[1.2146299048755518]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60676054 7.51757752]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39559862 1.40910417]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x714baaf87b40>\n",
+      "All tests passed.\n"
      ]
     }
    ],
