--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -17,18 +17,18 @@
       "GPU max threads per block: 1024\n",
       "=== Compiling kernel variant: crystal ===\n",
       "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_177909.cu -o /mnt/d//packing/temp/pack_cuda_crystal_177909.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_55611.cu -o /mnt/d//packing/temp/pack_cuda_crystal_55611.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.593 ms\n",
+      "ptxas info    : Compile time = 8.295 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 96 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 1233.684 ms\n",
+      "ptxas info    : Compile time = 899.195 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -39,18 +39,18 @@
       "  Local memory (bytes): 1264\n",
       "=== Compiling kernel variant: no_sep ===\n",
       "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_177909.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_177909.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_55611.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_55611.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 7.816 ms\n",
+      "ptxas info    : Compile time = 8.075 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 75 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 157.449 ms\n",
+      "ptxas info    : Compile time = 157.484 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -61,18 +61,18 @@
       "  Local memory (bytes): 1232\n",
       "=== Compiling kernel variant: sep ===\n",
       "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_177909.cu -o /mnt/d//packing/temp/pack_cuda_sep_177909.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_55611.cu -o /mnt/d//packing/temp/pack_cuda_sep_55611.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 7.968 ms\n",
+      "ptxas info    : Compile time = 8.062 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    160 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 160 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 161.244 ms\n",
+      "ptxas info    : Compile time = 156.632 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -110,7 +110,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 396 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 8.642 ms\n",
+      "ptxas info    : Compile time = 8.715 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 40\n",
@@ -120,23 +120,23 @@
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
       "GPU max threads per block: 1024\n",
       "=== Compiling LAP kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_177909.cu -o /mnt/d//packing/temp/lap_batch_177909.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_55611.cu -o /mnt/d//packing/temp/lap_batch_55611.cubin\n",
       "ptxas info    : 0 bytes gmem\n",
       "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.724 ms\n",
+      "ptxas info    : Compile time = 8.877 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.324 ms\n",
+      "ptxas info    : Compile time = 2.888 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 15.883 ms\n",
+      "ptxas info    : Compile time = 14.354 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -365,7 +365,133 @@
       "[5.058589]\n",
       "[5.058591746271536]\n",
       "[0.14144647]\n",
-      "[0.14144643480625813]\n"
+      "[0.14144643480625813]\n",
+      "[3.9452562]\n",
+      "[3.945255729561956]\n",
+      "[2.7107682]\n",
+      "[2.7107683021439404]\n",
+      "[3.1487665]\n",
+      "[3.148766349585172]\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[4.10586846 5.05859175]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.14144643 3.94525573]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[3.470697]\n",
+      "[3.470696988173085]\n",
+      "[6.9413943]\n",
+      "[6.94139397634617]\n",
+      "[8.393713]\n",
+      "[8.393712961948996]\n",
+      "[0.07739897]\n",
+      "[0.07739900693541185]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[8.39371296 0.07739901]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[17.353481]\n",
+      "[17.353484940865425]\n",
+      "[34.706963]\n",
+      "[34.70696988173085]\n",
+      "[41.96856]\n",
+      "[41.968564809744976]\n",
+      "[0.38699484]\n",
+      "[0.38699503467705926]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[41.96856481  0.38699503]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[0.3531003]\n",
+      "[0.35310069875272765]\n",
+      "[3.789965]\n",
+      "[3.789965582031825]\n",
+      "[2.146739]\n",
+      "[2.1467398140715064]\n",
+      "[2.6367323]\n",
+      "[2.6367332253648272]\n",
+      "[0.039698087]\n",
+      "[0.03969808876667014]\n",
+      "[1.8159052]\n",
+      "[1.815904948030701]\n",
+      "[1.2309797]\n",
+      "[1.2309794244696337]\n",
+      "[1.5046461]\n",
+      "[1.504646080872017]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.14673981 2.63673323]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03969809 1.81590495]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[0.62234104]\n",
+      "[0.6223413133262065]\n",
+      "[2.3894377]\n",
+      "[2.389438186820823]\n",
+      "[1.6067601]\n",
+      "[1.6067605381154593]\n",
+      "[7.5175767]\n",
+      "[7.517577523881461]\n",
+      "[1.3955986]\n",
+      "[1.3955986238550628]\n",
+      "[1.4091043]\n",
+      "[1.4091041677707845]\n",
+      "[1.1257305]\n",
+      "[1.1257304906431822]\n",
+      "[1.2146299]\n",
+      "[1.2146299048755518]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60676054 7.51757752]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39559862 1.40910417]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7281ac93d340>\n",
+      "All tests passed.\n"
      ]
     }
    ],
